<resources>
    <string name="app_name">BusChecker</string>
    <string name="quickSearchTitle">Quick search</string>
    <string name="stopCode">Stop code</string>
    <string name="check">Check</string>
    <string name="savedStops">Saved bus stops</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="stop">Stop</string>
    <string name="route">Route</string>
    <string name="required">Required</string>
    <string name="invalid">Invalid</string>
    <string name="wait">Please wait...</string>
    <string name="question">Question</string>
    <string name="sureDelete">Are you sure you want to delete this stop?</string>
    <string name="noStops">No saved bus stops, click the + to add one</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notifications">Notifications</string>
    <string name="sms" translatable="false">SMS</string>
    <string name="grant">Grant</string>
    <string name="granted">Granted</string>
    <string name="notificationsRationale">May be used to send you bus arrival times or other announcements.</string>
    <string name="smsRationale">BusChecker works by querying transport companies\' SMS services. To do this, it needs the SMS permissions.</string>
    <string name="continue_">Continue</string>
    <string name="disclaimer">BusChecker uses SMS (text messages) to get the bus arrival times. These SMS count against your mobile plan. \nDON\'T USE THE APP IF YOU DON\'T HAVE AN UNLIMITED SMS PLAN. \n\nI am not responsible if you continue to use the app and you use all of your available SMS. Continue only if you\'re sure that your SMS plan is unlimited.</string>
    <string name="startSetup">Start setup</string>
    <string name="setup">Setup</string>
    <string name="warning">Warning</string>
    <string name="permissions">Permissions</string>
    <string name="moneyDialog">You will see a popup saying that BusChecker sending a SMS to 52736 will cause charges. It won\'t be the case; click on \"Remember my choice\" and on \"Akways Allow\".</string>
    <string name="permsNotGranted">Permissions not granted</string>
    <string name="noSMSrationale">You must grant SMS permission to BusChecker to continue.</string>
    <string name="name">Name</string>
    <string name="routeNumber">Route number</string>
    <string name="verify">Verify</string>
    <string name="save">Save</string>
    <string name="addStop">Add bus stop</string>
    <string name="editStop">Edit bus stop</string>
    <string name="severalRoutes">Several routes available</string>
    <string name="availableRoutes">Available routes for stop</string>
    <string name="routeNotExist">Route doesn\'t exist</string>
    <string name="busTimesFor">"Bus times for stop "</string>
    <string name="invalidStopCode">Invalid stop code</string>
    <string name="makeSureStopCode">Make sure that you entered the right stop code, and try again.</string>
    <string name="invalidRouteNumber">Invalid route number</string>
    <string name="makeSureRouteNumber">Make sure that you entered the right route number, and try again.</string>
    <string name="changelog">1.0:\nInitial release</string>
    <string name="madewithlove">Made with ❤ by nin0dev</string>
    <string name="support">Support</string>
    <string name="privacy">Privacy</string>
    <string name="license">License</string>
    <string name="source_code">Source code</string>
    <string name="changelog_title">Changelog</string>
    <string name="about">About</string>
    <string name="update_available">Update available</string>
    <string name="download">Download</string>
    <string name="website">Website</string>
</resources>