<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/busCheckerImageAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="100dp"
                    app:srcCompat="@drawable/buschecker" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/madewithlove"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/supportButton"
                        style="@style/Widget.Material3.Button.TonalButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="@string/support"
                        app:icon="@drawable/ic_baseline_question_answer_24" />

                    <Button
                        android:id="@+id/contactButton"
                        style="@style/Widget.Material3.Button.TonalButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="@string/contact"
                        app:icon="@drawable/ic_baseline_email_24" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/privacyButton"
                        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="@string/privacy"
                        app:icon="@drawable/ic_baseline_security_24" />

                    <Button
                        android:id="@+id/licenseButton"
                        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="@string/license"
                        app:icon="@drawable/ic_baseline_gavel_24" />

                </LinearLayout>

                <Button
                    android:id="@+id/sourceCodeButton"
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/source_code"
                    app:icon="@drawable/ic_baseline_code_24" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/changelog"
                    style="@style/Widget.Material3.CardView.Outlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="15dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/changelog_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="30dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="15dp"
                            android:text="@string/changelog_title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                        <TextView
                            android:id="@+id/changelog_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="30dp"
                            android:layout_marginBottom="15dp"
                            android:text="@string/changelog" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>